# team-copilot

./: .env-db-template  .env_app_template  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile-db  LICENSE  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  Dockerfile-app  Dockerfile-db  Dockerfile-llm  devcontainer.json  docker-compose.yml  start.sh
src/team_copilot/: __init__.py  __main__.py  api.py  app.py  config.py  dependencies.py  main.py
src/team_copilot/agent/: __init__.py  agent.py  llm.py  tools.py
src/team_copilot/ai/: __init__.py
src/team_copilot/core/: __init__.py  auth.py  config.py  db.py  models.py  security.py
src/team_copilot/db/: __init__.py  session.py  setup.py  setup.sql  status.py
src/team_copilot/models/: __init__.py  data.py  models.py  request.py  response.py  types.py
src/team_copilot/routers/: __init__.py  auth.py  chat.py  documents.py  health.py  ui.py  users.py
src/team_copilot/services/: __init__.py  documents.py  embedding.py  extraction.py  search.py  users.py
src/team_copilot/static/ui/css/: home.css
src/team_copilot/static/ui/js/: home.js
src/team_copilot/templates/: home.html
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  conftest.py
tests/integration/auth/: __init__.py  test_login.py
tests/integration/chat/: __init__.py  test_query_agent.py
tests/integration/documents/: __init__.py  test_create_document.py  test_delete_document.py  test_get_all_documents.py  test_get_document.py  test_update_document.py
tests/integration/health/: __init__.py  test_get_app_status.py  test_get_db_status.py
tests/integration/users/: __init__.py  test_create_user.py  test_delete_user.py  test_get_all_users.py  test_get_current_user.py  test_get_user.py  test_update_user.py
tests/unit/: __init__.py  conftest.py
tests/unit/routers/: __init__.py  test_users.py
tests/unit/routers/documents/: __init__.py  test_create_document.py  test_delete_document.py  test_get_all_documents.py  test_get_document.py  test_update_document.py
tests/unit/routers/users/: __init__.py  test_create_user.py  test_delete_user.py  test_get_all_users.py  test_get_current_user.py  test_get_user  test_update_user.py
tests/unit/services/: __init__.py  test_documents.py  test_embedding.py  test_extraction.py  test_search.py  test_users.py
tools/: install-boostrap.sh
