[project]
name = "team-copilot"
version = "0.1.0"
description = "Chatbot agent for teams"
authors = [
    {name = "Jose A. Jimenez",email = "jajimenezcarm@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "pymupdf (>=1.25.4,<2.0.0)",
    "pytesseract (>=0.3.13,<0.4.0)",
    "requests (>=2.32.3,<3.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "langchain (>=0.3.23,<0.4.0)",
    "langgraph (>=0.3.31,<0.4.0)",
    "langchain-anthropic (>=0.3.12,<0.4.0)",
    "voyageai (>=0.3.2,<0.4.0)",
]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
